# lang-detection

./: pyproject.toml
dane/: de.txt  en.txt  fr.txt  nl.txt  pl.txt
dane/test/: de.txt  en.txt  fr.txt  nl.txt  pl.txt
lang_detection/: dataloader.py  detection.py  gui.py
models/: lang_detect_e10.json  lang_detect_e100.json  lang_detect_e20.json  lang_detect_e200.json  lang_detect_e300.json  lang_detect_e5.json  lang_detect_e50.json
perceptron/: __init__.py  __main__.py  _perceptron.py  _utils.py
