[tool.poetry]
name = "lang-detection"
version = "0.1.0"
description = ""
authors = ["Krystian Postek <krystian@postek.eu>"]
readme = "README.md"
packages = [{include = "lang_detection"}]

[tool.poetry.dependencies]
python = "^3.11"
pysimplegui = "^4.60.4"
pandas = "^2.0.1"
numpy = "^1.24.3"
click = "^8.1.3"
matplotlib = "^3.7.1"
unidecode = "^1.3.6"
attrdict = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
